# lammps-tensormd

./: .gitignore
.github/workflows/: codeql-analysis.yml  compile-msvc.yml  coverity.yml  unittest-macos.yml
cmake/: CMakeLists.txt
cmake/Modules/: FindN2P2.cmake  Testing.cmake
cmake/presets/: tensormd.cmake
examples/tensormd/: .gitignore  README.md  compare_dumped_tensors.py  run_compare.sh  run_speedup.sh
examples/tensormd/W/: W_apr3_k128_4H128.npz  W_k128_3H_ver_2c.npz  W_k32_snapshot.npz
examples/tensormd/W/dp/: dpse2.pb  input_v2_compat.json
examples/tensormd/W/speedup/: in.lammps
examples/tensormd/W/tensormd/: W_apr3_k128_4H128_fp32.npz  W_m3_k64_n128_squareplus.npz
examples/tensormd/beta-Sn/: in.data  in.lammps  perf-0GPa-beta.lammps  perf-100GPa-delta.lammps  reference.json
examples/tensormd/binary/: Mo8_Ni8_id3210.data
examples/tensormd/binary/medium/: MoNi_m3.npz  MoNi_m3.pb  MoNi_squareplus_500k.npz  force.yaml  in.lammps  in_default.lammps  job.sub  orise-run.slurm  output  sw-run.sh
examples/tensormd/example/: CuHe_m3k64_M_silu_fp64.npz  in.lammps
examples/tensormd/nnp/: create_nnp_case.py  in.data  in.lammps
examples/tensormd/perfsuite-AlCuMg-reducible/: in.lammps
examples/tensormd/sc26-benchmarks/1.Sn/: in.lammps  run.sh  run_natoms_vs_speed.sh  summarize.sh  summarize_natoms_vs_speed.sh
examples/tensormd/scaling/: W.mar28.npz
examples/tensormd/tdnp/: Be_tdnp_v3b52.pb  create_tdnp_case.py  in.lammps
examples/tensormd/testsuite-AlCuMg/: AlCuMg_v1_m3k64softplus_fp64.pb  AlCuMg_v2_m3k128nnp256_fp64.pt  create_case.py  run_test.sh  verify_results.py
examples/tensormd/testsuite-Be/: create_tdnp_case.py
examples/tensormd/testsuite-MoNi/: MoNi_V2_m3k128mlp_tanh_fp64.pt  MoNi_V2_m5k64mlp_silu_fp32.pt  MoNi_V2_m5k64mlp_silu_fp64.pt  MoNi_V2_m5k64mlp_softplus_fp32.pt  Ni6Mo2.poscar  create_case.py  run_all.sh  verify_results.py
examples/tensormd/trinary/: AlMgSi.24aug13.npz  AlMgSi.data  in.lammps  in_default.lammps  orise-run.slurm  run.sh  sw-run.sh
potentials/tensormd/: AlCuMg_V1_fp64.npz  AlCuMg_V2mlp_L_fp64.npz  AlCuMg_V2mlp_S_fp32.npz  AlCuMg_V2mlp_S_fp64.npz  Be_tdnp_v3b52_fp64.npz  CuHe_m3k64_M_silu_fp32.npz  CuHe_m3k64_M_silu_fp64.npz  Sn_lda1_fp32.npz  Sn_lda1_fp64.npz
src/: my_page.cpp  my_page.h
src/ML-TENSORMD/: .clang-format  README.md  activation.hpp  compute_tensormd_density.cpp  compute_tensormd_density.h  compute_tensormd_tdpe.cpp  compute_tensormd_tdpe.h  compute_tensormd_tdpe_atom.cpp  compute_tensormd_tdpe_atom.h  cppblas.hpp  cutoff.cpp  cutoff.h  descriptor.cpp  descriptor.h  fix_tensormd_etemp.cpp  fix_tensormd_etemp.h  fix_tensormd_etemp_atom.cpp  fix_ti_eq.cpp  fix_ti_eq.h  fnn.cpp  fnn.h  nnp.cpp  nnp.h  pair_tensormd.cpp  pair_tensormd.h  ration.hpp  tdnp.cpp  tdnp.h  tensor_debug.cpp  tensor_debug.h  tensor_ops.cpp  tensor_ops.h  tensormd.cpp  tensormd.h  tensormd_constants.h  tensormd_context.h  tensormd_device.h  tensormd_memory.h  tensormd_strategy.cpp  tensormd_strategy.h  (+10 more)
src/ML-TENSORMD/athread/: CMakeLists.txt  Readme.md  athread_tensoralloy.c  athread_tensoralloy.h  sw_sysmem.c  sw_sysmem.h
src/ML-TENSORMD/athread/slaves/: athread_nnp.c  batch_ddot_F1.c  batch_dgemv_F2.c  batch_small_dgemm.c  batch_small_dgemm_m.c  common.c  common.h  contract_G.c  contract_dEdP.c  descriptor.c  forward_resnet.c  get_cmax.c  r_cutoff.c  ration_compute.c  setup_tensors.c  sigma_dEdG.c  sum_forces.c
src/ML-TENSORMD/encoders/: cutoff.cpp  cutoff.h  encoder.cpp  encoder.h  encoder_context.h  mlp_encoder.cpp  mlp_encoder.h  mlp_head.cpp  mlp_head.h  mlp_radial_basis_encoder.cpp  mlp_radial_basis_encoder.h
src/ML-TENSORMD/gpu-baseline/cuda/: CMakeLists.txt  common.cu  kernel.cu  nnp.cu  ration.cu
src/ML-TENSORMD/gpu-baseline/hip/: CMakeLists.txt  kernel.hip  nnp.hip  ration.hip
src/ML-TENSORMD/gpu/cuda/: common.cuh  (+5 more)
src/ML-TENSORMD/heads/: energy_head.cpp  energy_head.h  energy_head_v1.cpp  energy_head_v1.h  energy_head_v2.cpp  energy_head_v2.h  finite_temp_energy_head_v1.cpp  finite_temp_energy_head_v1.h  neural_head.cpp  neural_head.h  neural_head_context.h
src/ML-TENSORMD/kernels/: kernels.cpp  kernels.h  kernels_core.cpp  kernels_core_forces.cpp  kernels_core_setup.cpp  kernels_encoder.cpp  kernels_encoder.h  kernels_fusion.cpp  kernels_fusion.h  kernels_head.cpp  kernels_head.h  kernels_helpers.h  kernels_spline.cpp  kernels_spline.h  kernels_utils.cpp  kernels_utils.h  kernels_v1_ops.cpp  kernels_v1_ops.h  kernels_v2_ops.cpp  kernels_v2_ops.h
src/ML-TENSORMD/kernels/arch/cuda/: CMakeLists.txt  cuda_common.cu  cuda_common.cuh  cuda_math.cuh  kernels_cuda_core_Fa.cu  kernels_cuda_core_G.cu  kernels_cuda_core_P.cu  kernels_cuda_core_W.cu  kernels_cuda_core_forces.cu  kernels_cuda_core_setup.cu  kernels_cuda_core_setup_neigh.cu  kernels_cuda_core_setup_sync.cu  kernels_cuda_encoder.cu  kernels_cuda_encoder_Fr.cu  kernels_cuda_encoder_cutoff.cu  kernels_cuda_fusion.cu  kernels_cuda_fusion_backward.cu  kernels_cuda_fusion_forward.cu  kernels_cuda_fusion_helpers.cuh  kernels_cuda_fusion_types.cuh  kernels_cuda_head.cu  kernels_cuda_head_fusion.cu  kernels_cuda_head_helpers.cuh  kernels_cuda_head_hybrid.cu  kernels_cuda_spline_cubic.cu  kernels_cuda_utils.cu  kernels_cuda_utils_memory.cu  kernels_cuda_utils_timer.cu  kernels_cuda_v1_ops.cu  kernels_cuda_v2_ops.cu  splines.cuh
src/ML-TENSORMD/lammps/: compute_tensormd_density.cpp  compute_tensormd_density.h  compute_tensormd_tdpe.cpp  compute_tensormd_tdpe.h  compute_tensormd_tdpe_atom.cpp  compute_tensormd_tdpe_atom.h  fix_tensormd_etemp.cpp  fix_tensormd_etemp_atom.cpp  fix_tensormd_etemp_atom.h
src/ML-TENSORMD/utils/: tensor_debug.cpp  tensor_debug.h
unittest/force-styles/: test_pair_style.cpp
unittest/force-styles/tests/: data.tensormd.1  in.tensormd-nnp  in.tensormd-tdnp  manybody-pair-snap.yaml  manybody-pair-tensormd-nnp.yaml  manybody-pair-tensormd-tdnp-ration.yaml  manybody-pair-tensormd-tdnp.yaml
(+327 files in other folders)
